First usable version. Further tests must be performed.